--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.AlumniConnect"
         tools:targetApi="31">
         <activity
+            android:name=".view.home.HomeActivity"
+            android:exported="false"
+            android:label="@string/title_activity_home" />
+        <activity
             android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
@@ -23,12 +27,9 @@
         </activity>
         <activity
             android:name=".view.auth.LoginActivity"
-            android:exported="true"/>
-        <activity
-            android:name=".view.auth.RegisterActivity"
             android:exported="true" />
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.auth.RegisterActivity"
             android:exported="true" />
     </application>
 
